2012-03-27  David S. Miller  <davem@davemloft.net>

	* conform/Makefile: Run run-conformtest.sh using $(BASH).

	* sysdeps/sparc/sparc64/Makefile (ASFLAGS-.os): Move before
	have-as-vis3 check.

2012-03-27  Andreas Jaeger  <aj@suse.de>

	* sysdeps/x86_64/elf/configure.in: Moved to ...
	* sysdeps/x86_64/configure.in: ... here.
	* sysdeps/x86_64/elf/start.S: Moved to ...
	* sysdeps/x86_64/start.S: ... here.
	* sysdeps/x86_64/elf/configure: Delete.

	* sysdeps/x86_64/configure.in: Merge contents from
	sysdeps/i386/configure.in (without i686 check).

	* sysdeps/i386/elf/Versions: Merge into ...
	* sysdeps/i386/Versions: ... this.
	* sysdeps/i386/elf/Versions: Delete file.
	* sysdeps/i386/elf/start.S: Moved to ...
	* sysdeps/i386/start.S: ...here.
	* sysdeps/i386/elf/configure.in: Merge into...
	* sysdeps/i386/configure.in: ...here.
	* sysdeps/i386/elf/configure.in: Delete file.
	* sysdeps/i386/elf/configure: Delete file.

	* sysdeps/generic/elf/backtracesyms.c: Moved to ...
	* debug/backtracesyms.c: ... here.
	* sysdeps/generic/elf/backtracesymsfd.c: Moved to ...
	* debug/backtracesymsfd.c: ... here.
	* sysdeps/generic/elf/ifunc-sel.h: Moved to ...
	* sysdeps/generic/ifunc-sel.h: ... here.

	* sysdeps/unix/i386/start.c: Delete file.
	* sysdeps/unix/sparc/start.c: Delete file.
	* sysdeps/unix/start.c: Delete file.

	* sysdeps/sh/elf/configure.in: Moved to ...
	* sysdeps/sh/configure.in: ... here.
	* sysdeps/sh/elf/start.S: Moved to ...
	* sysdeps/sh/start.S: ... here.
	* sysdeps/sh/elf/configure: Delete file.

	* sysdeps/powerpc/powerpc64/elf/bzero.S: Moved to ...
	* sysdeps/powerpc/powerpc64/bzero.S: ... here.
	* sysdeps/powerpc/powerpc64/elf/entry.h: Moved to ...
	* sysdeps/powerpc/powerpc64/entry.h: ... here.
	* sysdeps/powerpc/powerpc64/elf/start.S: Moved to ...
	* sysdeps/powerpc/powerpc64/start.S: here.
	* sysdeps/powerpc/powerpc64/elf/Makefile: Merge into ...
	* sysdeps/powerpc/powerpc64/Makefile: ... this.